--- a/README
+++ b/README
@@ -1,11 +1,11 @@
 Welcome to Kitaman - SIMPLY BEST PACKAGE MANAGER IN THE WORLD !!!!
 
-  Hi, and welcome to the world of Pariah,
+  Hi, and welcome to the world of Kita,
  
 Basically, there isnt much you should know.
 Experience with gentoo linux and portage would be very useful.
 
-To install you can use install.sh script
+To install, please run rake kitaman:install['prefix']
 
 For any questions please email Kirill R (you should know how)
 
