Cleaned up and Documented a lot of code
Hoping to clean more and start on temp system

--- a/README
+++ b/README
@@ -1,5 +1,45 @@
 Welcome to Kitaman - SIMPLY BEST PACKAGE MANAGER IN THE WORLD !!!!
 
+                             :xkkko;          .';;.                                                            
+                            ,kkkOOOOO.      .okkkkO,                                                           
+                            oO000KKKNdcodo;,O000000o                                                           
+                            xKXXNNWWMNNNNNNNWWNNXXXo                                                           
+                            oNWW0xo:;,'..';cokKWMWW;                           ..';........                    
+                            'l.                 'lk                       .....    ....   .'...                
+                         ...                       ..                  ...              ....   ...             
+                        ..                           .'               ,.                   .,:,.  ..           
+                       ,                              .;            .c'...                    .;,   '.         
+                      '                               .:,          .dlc:,'.                          '         
+                      ,                             ..':d          lxxdlc;'..                         ,        
+                     .,.......''','.     ..'.''......';ck'        .K0Okxoc;,.......'....      .....   ;        
+                     ',......';::;.........,;:,....',;cdOc        ,NNXKOkdl:;,'....;::,........:::'...;.       
+                     .l;;;;;,,,,,,,,,'''',,,,,,,,;;:coxOXc        ;MMWNXKOxdlc:;;,,,,,,,'''''',,,,,,,,l        
+                      lllllcccccccc::::::::cccccclloxkKXW,        .MMMMWNXKOkdollccccc::::;::::cccccco,        
+                      'xdddddoooooollcccclloodddddxO0XWMX          OMMMMMWNXKOkxddddooolcccclloooooox;         
+                       :kkkkkxxdxO0kddooodxO00xxkOKXWMMW,          .XMMMMMMWNXK0kxdOKOkddoodkOOxdxkx.          
+                        'kOkOOOOkxk000KK0000OkO0KXXWMMO.             dMMMMMMWNXKK00kO0K00OO0OkxkkOc            
+                          dkkkkO00KXNXK0KNWNXKK0KKNMMK                OWMMMMNXK0000KXNNNKKXXK0Okk'             
+                         ,;codkOOO0000KKK0000000KKXNN0o.            .ok0XNNNXK000OOOOOOOOOOOOkkxo.             
+                        ;'cllldxxxxxxxxxxxxkkkkkOOKNN0kx'          .xxk0NWNK0Okxxxxddddddddddolxc:.            
+                       ;:xKNd,;;::ccccccccccccccloxXWWXOd          l00XNWMXOxdollcccccccccc:::;XXx'            
+                       .dko,:..''',,,,,,,,,,,,,,;:lk.,ll.           ::..WN0xolc::::;;;;;;;;;,,':'.             
+                           ,.........''''''''''',,:lo                  'X0kdlc:;;;;;,,,,,,,,,'',               
+                          ., ...................'',:o;                 :0Oxoc:;;,,,,,,,,,,''''.,               
+                          ,  .....................',:d.                oOkdlc;;,,,,,,,''''''''.;               
+                         ..  ......................';cl                kkxol:;,,,,,''''''''''..:               
+                         ,   .......................,;o'              .Oxdlc;,,,'''''''''''''..,.              
+                        '.  ........................',:o              ;xxol:;,'''''',,,,,'''....,              
+                        , ..........................',:d.             :xdoc:,,'''',,;:c:;,,''...,              
+                        :,......................'',:llc:.           ..'kkdl:;,,,,;cdOKXKkoc:;,,;,              
+                         .;xdoolllllllllloooddddxxk0Xdc;,'..........',co0NX0kxdxOKWMMMMMMNX0Okxl..             
+                       .':oOXK000KNWMMMMMMMMMWNXXNWMN0xl:;''.........',:lxOKXNNNNXXXKKKK0000Oxl:,..            
+                      ..,:ok0XNWWWWWWWWWWWWWNNNXXK0kdl:;,'..................',,,,;;;;;,,,''......              
+                       ....',;::cccllllllllcc::;;,,'.......                                                    
+                                .................                                                              
+
+
+
+
   Hi, and welcome to the world of Kita,
  
 Basically, there isnt much you should know.
