--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,6 @@
-Welcome to Kitaman - SIMPLY BEST PACKAGE MANAGER IN THE WORLD !!!!
+= kitaman
+
+Welcome to Kitaman - SIMPLY THE BEST PACKAGE MANAGER IN THE WORLD !!!!
 
                              :xkkko;          .';;.                                                            
                             ,kkkOOOOO.      .okkkkO,                                                           
@@ -39,7 +41,6 @@ Welcome to Kitaman - SIMPLY BEST PACKAGE MANAGER IN THE WORLD !!!!
 
 
 
-
 Hi, and welcome to the world of Kita,
 
 Basically, there isnt much you should know.
@@ -49,12 +50,23 @@ Requirements:
   Ruby 1.9.1+
   Rake
 
-To install, please run:
-
-  rake kitaman:install['prefix']
 
 For any questions please email Kirill R (you should know how)
 
 All the best
 
 Kirill R
+
+== Note on Patches/Pull Requests
+ 
+* Fork the project.
+* Make your feature addition or bug fix.
+* Add tests for it. This is important so I don't break it in a
+  future version unintentionally.
+* Commit, do not mess with rakefile, version, or history.
+  (if you want to have your own version, that is fine but bump version in a commit by itself I can ignore when I pull)
+* Send me a pull request. Bonus points for topic branches.
+
+== Copyright
+
+Copyright (c) 2010 Kirill Radzikhovskyy. See LICENSE for details.
